gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/protattr3.d
version https://git-lfs.github.com/spec/v1
oid sha256:de60732abc4e3549b6ab62581979b86c15cecd07a89d6dbb1dcf68ff1e3d684b
size 222
